--- a/style.css
+++ b/style.css
@@ -4412,6 +4412,9 @@ div#bodyContent span {
     .style_img{
         margin-top: 300px;
     }
+    #buttons_internship{
+        margin-top: 40px;
+    }
 }
 
 
