--- a/assets/css/responsive.css
+++ b/assets/css/responsive.css
@@ -597,7 +597,7 @@
     }
     .header-hero-area {
     height: 100%;
-    padding-bottom: 400px;
+    /*padding-bottom: 400px; */
 }
     .hero-social-link-area {
         top: 90%;
